# ProjectSahbah

./: .gitignore  README.md  pose_jitter.py  pyproject.toml  vercel.json
docs/: live_lab.md  methodology.md  research_improvement_plan.md
models/: README.md
scripts/: generate_sample_data.py  render_live_mockup.py  setup_live_env.ps1
src/pose_jitter_lab/: __init__.py  aggregate.py  cli.py  io.py  live.py  live_metrics.py  metrics.py  quality.py  report.py  sample_data.py  stats.py
tests/: test_aggregate.py  test_io.py  test_live_metrics.py  test_metrics.py  test_quality.py  test_stats.py
web/: index.html
web/css/: app.css
web/js/: analysis.js  app.js  charts.js  logger.js  pose.js
